# DiagnosixTest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requests.sh
app/: main.py  run.sh
app/api/: users_api.py
app/core/: config.py  dependency.py  security.py
app/crud/: base_crud.py  users_crud.py
app/migrations/: env.py
app/migrations/versions/: 2025_04_16_1709-9e53fd2a540b_initail_commit.py  2025_04_17_1404-e9a66401cdd8_fix_users_active_field.py
app/models/: __init__.py  base.py  user_models.py  users_models.py
app/schemas/: users_schemas.py
app/services/: users_services.py
app/tests/: conftest.py  utils.py
app/tests/api_users/: test_users_api.py
app/tests/auth/: test_auth.py
app/tests/tests_factory/: users_facrory.py
